# VibeOps

./: .claudeignore  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  sse.ts  types.ts
frontend/src/components/: AmbientBlobs.tsx  BrandIcon.tsx  Button.tsx  Chrome.tsx  CodeBlock.tsx  ConfirmNav.tsx  Field.tsx  InventoryDialog.tsx  JourneyLine.tsx  Marquee.tsx  MaskReveal.tsx  Panel.tsx  PlexusBackground.tsx  Reveal.tsx  Select.tsx  Spinner.tsx  StatusDot.tsx  Wordmark.tsx  scramble.tsx
frontend/src/landing/: LandingScreen.tsx
frontend/src/lib/: motion.ts  useParallax.ts  utils.ts
frontend/src/screens/: ArchitectureScreen.tsx  ChatScreen.tsx  DeploymentScreen.tsx  ReviewScreen.tsx  SetupScreen.tsx  TerminalScreen.tsx
frontend/src/store/: useStore.ts
frontend/src/styles/: globals.css
src/vibeops/: config.py
src/vibeops/agents/: architecture.py  deployment.py  iac.py  iac_prompts.py  requirement.py  requirement_defaults.py  requirement_prompts.py
src/vibeops/api/: __init__.py  deps.py  graph_runtime.py  main.py  routes_chat.py  routes_deploy.py  routes_graph.py  routes_inventory.py  routes_review.py  routes_session.py  routes_setup.py  session.py
src/vibeops/core/: analytics.py  auth.py  errors.py  gcp_context.py  llm.py  logging.py  policy.py  prices.py  secrets.py
src/vibeops/cost/: __init__.py  cloud_catalog.py  infracost.py  price_table.py  pricing_constants.py
src/vibeops/graph/: __init__.py  orchestrator.py  state.py
src/vibeops/models/: architecture.py  conversation.py  deployment.py  iac.py  requirement.py  results.py  spec.py  state.py
src/vibeops/services/: __init__.py  conversation.py  review.py
src/vibeops/terraform/: backend.py  error_parser.py  errors.py  render.py  runner.py
src/vibeops/tools/: __init__.py  billing.py  compute.py  resource_manager.py
tests/integration/: conftest.py  test_apply_destroy_live.py  test_iac_live.py  test_tools_live.py
tests/unit/: test_analytics.py  test_api_app.py  test_api_chat.py  test_api_deploy.py  test_api_graph.py  test_api_inventory.py  test_api_review.py  test_api_session.py  test_api_setup.py  test_app_imports.py  test_approval_gate.py  test_approval_gate_unchanged.py  test_architecture_caching.py  test_architecture_discovery.py  test_architecture_finalization.py  test_architecture_no_fit.py  test_architecture_no_llm.py  test_architecture_ranking.py  test_architecture_zero_quota.py  test_auth_validation.py  test_cancel_signal_path.py  test_conversation_service.py  test_cost_cap_check.py  test_cost_cap_enforcement.py  test_cost_cloud_catalog.py  test_cost_fallback.py  test_cost_infracost.py  test_cost_price_table.py  test_demo_mode.py  test_deploy_availability_recheck.py  test_deployment_allowlist_recheck.py  test_deployment_apply_full_failure.py  test_deployment_apply_partial_failure.py  test_deployment_happy_path.py  test_deployment_no_llm.py  test_deployment_on_log.py  test_deployment_plan_failure.py  test_deployment_retry.py  test_deployment_stub_unchanged.py  test_destroy_confirm_text_required.py  (+62 more)
(+13 files in other folders)
